// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/terraform-provider/index getReleases processes data with alternative backend 1`] = `
Object {
  "registryUrl": "https://releases.hashicorp.com",
  "releases": Array [
    Object {
      "version": "1.19.0",
    },
    Object {
      "version": "1.20.0",
    },
    Object {
      "version": "2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-google-beta",
}
`;

exports[`datasource/terraform-provider/index getReleases processes data with alternative backend 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/google-beta",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases processes real data 1`] = `
Object {
  "homepage": "https://registry.terraform.io/providers/hashicorp/azurerm",
  "registryUrl": "https://registry.terraform.io",
  "releases": Array [
    Object {
      "version": "2.52.0",
    },
    Object {
      "releaseTimestamp": "2019-11-26T08:22:56.000Z",
      "version": "2.53.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-azurerm",
}
`;

exports[`datasource/terraform-provider/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases processes real data from lookupName 1`] = `
Object {
  "homepage": "https://registry.company.com/providers/hashicorp/azurerm",
  "registryUrl": "https://registry.company.com",
  "releases": Array [
    Object {
      "version": "2.52.0",
    },
    Object {
      "releaseTimestamp": "2019-11-26T08:22:56.000Z",
      "version": "2.53.0",
    },
  ],
  "sourceUrl": "https://github.com/terraform-providers/terraform-provider-azurerm",
}
`;

exports[`datasource/terraform-provider/index getReleases processes real data from lookupName 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.company.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.company.com/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.company.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.company.com/v1/providers/hashicorp/azurerm",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for error in service discovery 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/.well-known/terraform.json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.terraform.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.terraform.io/v1/providers/hashicorp/azurerm",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "releases.hashicorp.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://releases.hashicorp.com/index.json",
  },
]
`;

exports[`datasource/terraform-provider/index getReleases simulate failing secondary release source 1`] = `null`;
